2011-02-16 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/ajax/visual_console_builder.ajax.php: fixed the position of
	items "icons".

2011-02-16 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/functions_db.php: fixed check "<>" in other case as the ajax
	calls in the visual map.
	
2011-02-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

	* godmode/users/user_list.php: If user is not admin then don't 
	display users of others groups.

	Fixes: #3175670	

2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/javascript/pandora.js, operation/agentes/ver_agente.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php: fixed when the agent haven't
	any module and fixed when to try to create items without modules selected.

2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* operation/visual_console/render_view.php: fixed the link to edit
	visual console.

2011-02-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

	* godmode/users/user_list.php: Only display administrator users if
	current user is administrator too. 
	* godmode/users/configure_user.php: Only administrator can create
	administrator users. Only administrator users can assign group "All" to
	a profile.  

	Fixes: #3180761

2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* godmode/alerts/alert_list.php: fixed the lost var in the audit.
	
	Fixes: #3182470

2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/functions_alerts.php, operation/agentes/estado_agente.php: added
	check ACL in the show actions in the creation and edit of alerts.
	
	Fixes: #3166657

2011-02-15 Javier Lanz <javier.lanz@artica.es>
	* godmode/users/configure_user.php: Truncated group name on user detail
	editor